force-app/main/default/objects/Snapshot_Opportunity__c/Snapshot_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Snapshot: Opportunity</label>
    <nameField>
        <displayFormat>SNAP-{0000}</displayFormat>
        <label>Snapshot: Opportunity by Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot: Opportunities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>