force-app/main/default/objects/Snapshot_Opportunity__c/fields/Opportunity_Duration__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Duration__c</fullName>
    <label>Opportunity Duration</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>