force-app/main/default/objects/Snapshot_Opportunity__c/fields/SnapshotName__c.field-meta.xml
<CustomField>
    <fullName>SnapshotName__c</fullName>
    <label>SnapshotName</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>