force-app/main/default/objects/Snapshot_Opportunity__c/fields/Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Amount__c</fullName>
    <label>Weighted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>